Dataset creation writes distinct non-null tags to database
In keeping with conventions established by Rawls workspace tagging, I have considered tags to be case-sensitive.
Expanded unit testing, along with refactoring of DatasetDaoTest to delegate dataset deletion to an @After teardown method.
To make that easier, we now register created dataset IDs within helper method DatasetDao.createDataset.