@@ -2,15 +2,18 @@ package bio.terra.service.dataset;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
+import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 
 import bio.terra.app.model.CloudRegion;
@@ -21,6 +24,7 @@ import bio.terra.common.EmbeddedDatabaseTest;
 import bio.terra.common.MetadataEnumeration;
 import bio.terra.common.Table;
 import bio.terra.common.category.Unit;
+import bio.terra.common.fixtures.AuthenticationFixtures;
 import bio.terra.common.fixtures.JsonLoader;
 import bio.terra.common.fixtures.ProfileFixtures;
 import bio.terra.common.fixtures.ResourceFixtures;
@@ -48,6 +52,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import org.hamcrest.Matchers;
 import org.junit.After;
 import org.junit.Before;
@@ -82,13 +87,10 @@ public class DatasetDaoTest {
 
   private BillingProfileModel billingProfile;
   private UUID projectId;
+  private List<UUID> datasetIds;
 
   private static final AuthenticatedUserRequest TEST_USER =
-      AuthenticatedUserRequest.builder()
-          .setSubjectId("DatasetUnit")
-          .setEmail("dataset@unit.com")
-          .setToken("token")
-          .build();
+      AuthenticationFixtures.randomUserRequest();
 
   private UUID createDataset(
       DatasetRequestModel datasetRequest, String newName, GoogleRegion region) throws Exception {
@@ -105,7 +107,8 @@ public class DatasetDaoTest {
     UUID datasetId = UUID.randomUUID();
     dataset.id(datasetId);
     datasetDao.createAndLock(dataset, createFlightId, TEST_USER);
-    datasetDao.unlockExclusive(dataset.getId(), createFlightId);
+    datasetDao.unlockExclusive(datasetId, createFlightId);
+    datasetIds.add(datasetId);
     return datasetId;
   }
 
@@ -122,36 +125,35 @@ public class DatasetDaoTest {
 
     GoogleProjectResource projectResource = ResourceFixtures.randomProjectResource(billingProfile);
     projectId = resourceDao.createProject(projectResource);
+
+    datasetIds = new ArrayList<>();
   }
 
   @After
   public void teardown() {
+    for (UUID datasetId : datasetIds) {
+      assertTrue(
+          "Dataset %s was deleted".formatted(datasetId), datasetDao.delete(datasetId, TEST_USER));
+      assertThrows(
+          "Dataset %s cannot be retrieved after deletion".formatted(datasetId),
+          DatasetNotFoundException.class,
+          () -> datasetDao.retrieve(datasetId));
+    }
     resourceDao.deleteProject(projectId);
     profileDao.deleteBillingProfileById(billingProfile.getId());
-  }
-
-  @Test(expected = DatasetNotFoundException.class)
-  public void datasetDeleteTest() throws Exception {
-    UUID datasetId = createDataset("dataset-minimal.json");
-    assertThat(
-        "dataset delete signals success", datasetDao.delete(datasetId, TEST_USER), equalTo(true));
-    datasetDao.retrieve(datasetId);
   }
 
   @Test
   public void enumerateTest() throws Exception {
     UUID dataset1 = createDataset("dataset-minimal.json");
-    UUID dataset2 = createDataset("ingest-test-dataset-east.json");
-    List<UUID> datasetIds = new ArrayList<>();
-    datasetIds.add(dataset1);
-    datasetIds.add(dataset2);
+    createDataset("ingest-test-dataset-east.json");
     Dataset dataset1FromDB = datasetDao.retrieve(dataset1);
 
     MetadataEnumeration<DatasetSummary> summaryEnum =
         datasetDao.enumerate(
             0, 2, EnumerateSortByParam.CREATED_DATE, SqlSortDirection.ASC, null, null, datasetIds);
     List<DatasetSummary> datasets = summaryEnum.getItems();
-    assertThat("dataset enumerate limit param works", datasets.size(), equalTo(2));
+    assertThat("dataset enumerate limit param works", datasets, hasSize(2));
 
     assertThat(
         "dataset enumerate returns datasets in the order created",
@@ -213,8 +215,8 @@ public class DatasetDaoTest {
     List<DatasetSummary> filteredDefaultRegionDatasets = filterDefaultRegionEnum.getItems();
     assertThat(
         "dataset filter by default GCS region returns correct total",
-        filteredDefaultRegionDatasets.size(),
-        equalTo(1));
+        filteredDefaultRegionDatasets,
+        hasSize(1));
     assertTrue(
         "dataset filter by default GCS region returns correct datasets",
         filteredDefaultRegionDatasets.stream()
@@ -235,8 +237,8 @@ public class DatasetDaoTest {
     List<DatasetSummary> filteredNameAndRegionDatasets = filterNameAndRegionEnum.getItems();
     assertThat(
         "dataset filter by name and region returns correct size results",
-        filteredNameAndRegionDatasets.size(),
-        equalTo(1));
+        filteredNameAndRegionDatasets,
+        hasSize(1));
     assertThat(
         "dataset filter by name and region returns dataset with correct name",
         filteredNameAndRegionDatasets.get(0).getName(),
@@ -270,164 +272,140 @@ public class DatasetDaoTest {
     List<DatasetSummary> filteredRegionDatasets = filterRegionEnum.getItems();
     assertThat(
         "dataset filter by non-default GCS region returns correct total",
-        filteredRegionDatasets.size(),
-        equalTo(1));
+        filteredRegionDatasets,
+        hasSize(1));
     assertTrue(
         "dataset filter by non-default region returns correct dataset",
         filteredRegionDatasets.stream()
             .allMatch(
                 datasetSummary ->
                     datasetSummary.datasetStorageContainsRegion(GoogleRegion.US_EAST1)));
-
-    datasetDao.delete(dataset1, TEST_USER);
-    datasetDao.delete(dataset2, TEST_USER);
   }
 
   @Test
   public void datasetTest() throws Exception {
     DatasetRequestModel request =
         jsonLoader.loadObject("dataset-create-test.json", DatasetRequestModel.class);
-    String expectedName = request.getName() + UUID.randomUUID().toString();
+    String expectedName = request.getName() + UUID.randomUUID();
 
     GoogleRegion testSettingRegion = GoogleRegion.ASIA_NORTHEAST1;
     UUID datasetId = createDataset(request, expectedName, testSettingRegion);
-    try {
-      Dataset fromDB = datasetDao.retrieve(datasetId);
+    Dataset fromDB = datasetDao.retrieve(datasetId);
 
-      assertThat("dataset name is set correctly", fromDB.getName(), equalTo(expectedName));
+    assertThat("dataset name is set correctly", fromDB.getName(), equalTo(expectedName));
 
-      // verify tables
+    // verify tables
+    assertThat("correct number of tables created for dataset", fromDB.getTables(), hasSize(2));
+    fromDB.getTables().forEach(this::assertDatasetTable);
+
+    assertThat(
+        "correct number of relationships are created for dataset",
+        fromDB.getRelationships(),
+        hasSize(2));
+
+    assertTablesInRelationship(fromDB);
+
+    // verify assets
+    assertThat(
+        "correct number of assets created for dataset",
+        fromDB.getAssetSpecifications(),
+        hasSize(2));
+    fromDB.getAssetSpecifications().forEach(this::assertAssetSpecs);
+
+    for (GoogleCloudResource resource : GoogleCloudResource.values()) {
+      CloudRegion region = fromDB.getDatasetSummary().getStorageResourceRegion(resource);
       assertThat(
-          "correct number of tables created for dataset", fromDB.getTables().size(), equalTo(2));
-      fromDB.getTables().forEach(this::assertDatasetTable);
-
-      assertThat(
-          "correct number of relationships are created for dataset",
-          fromDB.getRelationships().size(),
-          equalTo(2));
-
-      assertTablesInRelationship(fromDB);
-
-      // verify assets
-      assertThat(
-          "correct number of assets created for dataset",
-          fromDB.getAssetSpecifications().size(),
-          equalTo(2));
-      fromDB.getAssetSpecifications().forEach(this::assertAssetSpecs);
-
-      for (GoogleCloudResource resource : GoogleCloudResource.values()) {
-        CloudRegion region = fromDB.getDatasetSummary().getStorageResourceRegion(resource);
-        assertThat(
-            String.format("dataset %s region is set", resource),
-            region,
-            equalTo(testSettingRegion));
-      }
-
-      assertThat(
-          "dataset has billing profiles returned from the database",
-          fromDB.getDatasetSummary().getBillingProfiles(),
-          is(not(empty())));
-
-      assertThat(
-          "dataset default Billing Profile matches default profile id",
-          fromDB.getDatasetSummary().getDefaultBillingProfile().getId(),
-          equalTo(fromDB.getDatasetSummary().getDefaultProfileId()));
-
-      assertThat(
-          "Cloud platform is returned", fromDB.getCloudPlatform(), equalTo(CloudPlatform.GCP));
-    } finally {
-      datasetDao.delete(datasetId, TEST_USER);
+          String.format("dataset %s region is set", resource), region, equalTo(testSettingRegion));
     }
+
+    assertThat(
+        "dataset has billing profiles returned from the database",
+        fromDB.getDatasetSummary().getBillingProfiles(),
+        is(not(empty())));
+
+    assertThat(
+        "dataset default Billing Profile matches default profile id",
+        fromDB.getDatasetSummary().getDefaultBillingProfile().getId(),
+        equalTo(fromDB.getDatasetSummary().getDefaultProfileId()));
+
+    assertThat("Cloud platform is returned", fromDB.getCloudPlatform(), equalTo(CloudPlatform.GCP));
   }
 
   @Test
   public void datasetRegionFirestoreFallbackTest() throws Exception {
     DatasetRequestModel request =
         jsonLoader.loadObject("dataset-create-test.json", DatasetRequestModel.class).region("US");
-    String expectedName = request.getName() + UUID.randomUUID().toString();
+    String expectedName = request.getName() + UUID.randomUUID();
 
     UUID datasetId = createDataset(request, expectedName, GoogleRegion.US);
-    try {
-      Dataset fromDB = datasetDao.retrieve(datasetId);
+    Dataset fromDB = datasetDao.retrieve(datasetId);
 
-      for (GoogleCloudResource resource : GoogleCloudResource.values()) {
-        CloudRegion region =
-            (GoogleRegion) fromDB.getDatasetSummary().getStorageResourceRegion(resource);
-        GoogleRegion expectedRegion =
-            (resource == GoogleCloudResource.BIGQUERY) ? GoogleRegion.US : GoogleRegion.US_EAST4;
-        assertThat(
-            String.format("dataset %s region is set to %s", resource, region.name()),
-            region,
-            equalTo(expectedRegion));
-      }
-    } finally {
-      datasetDao.delete(datasetId, TEST_USER);
+    for (GoogleCloudResource resource : GoogleCloudResource.values()) {
+      CloudRegion region = fromDB.getDatasetSummary().getStorageResourceRegion(resource);
+      GoogleRegion expectedRegion =
+          (resource == GoogleCloudResource.BIGQUERY) ? GoogleRegion.US : GoogleRegion.US_EAST4;
+      assertThat(
+          String.format("dataset %s region is set to %s", resource, region.name()),
+          region,
+          equalTo(expectedRegion));
     }
   }
 
   @Test
   public void partitionTest() throws Exception {
     UUID datasetId = createDataset("ingest-test-partitioned-dataset.json");
-    try {
-      Dataset fromDB = datasetDao.retrieve(datasetId);
-      DatasetTable participants =
-          fromDB.getTableByName("participant").orElseThrow(IllegalStateException::new);
-      DatasetTable samples =
-          fromDB.getTableByName("sample").orElseThrow(IllegalStateException::new);
-      DatasetTable files = fromDB.getTableByName("file").orElseThrow(IllegalStateException::new);
+    Dataset fromDB = datasetDao.retrieve(datasetId);
+    DatasetTable participants =
+        fromDB.getTableByName("participant").orElseThrow(IllegalStateException::new);
+    DatasetTable samples = fromDB.getTableByName("sample").orElseThrow(IllegalStateException::new);
+    DatasetTable files = fromDB.getTableByName("file").orElseThrow(IllegalStateException::new);
 
-      assertThat(
-          "int-range partition settings are persisted",
-          participants.getBigQueryPartitionConfig(),
-          equalTo(BigQueryPartitionConfigV1.intRange("age", 0, 120, 1)));
-      assertThat(
-          "date partition settings are persisted",
-          samples.getBigQueryPartitionConfig(),
-          equalTo(BigQueryPartitionConfigV1.date("date_collected")));
-      assertThat(
-          "ingest-time partition settings are persisted",
-          files.getBigQueryPartitionConfig(),
-          equalTo(BigQueryPartitionConfigV1.ingestDate()));
-    } finally {
-      datasetDao.delete(datasetId, TEST_USER);
-    }
+    assertThat(
+        "int-range partition settings are persisted",
+        participants.getBigQueryPartitionConfig(),
+        equalTo(BigQueryPartitionConfigV1.intRange("age", 0, 120, 1)));
+    assertThat(
+        "date partition settings are persisted",
+        samples.getBigQueryPartitionConfig(),
+        equalTo(BigQueryPartitionConfigV1.date("date_collected")));
+    assertThat(
+        "ingest-time partition settings are persisted",
+        files.getBigQueryPartitionConfig(),
+        equalTo(BigQueryPartitionConfigV1.ingestDate()));
   }
 
   @Test
   public void primaryKeyTest() throws Exception {
     UUID datasetId = createDataset("dataset-primary-key.json");
-    try {
-      Dataset fromDB = datasetDao.retrieve(datasetId);
-      DatasetTable variants =
-          fromDB.getTableByName("variant").orElseThrow(IllegalStateException::new);
-      DatasetTable freqAnalysis =
-          fromDB.getTableByName("frequency_analysis").orElseThrow(IllegalStateException::new);
-      DatasetTable metaAnalysis =
-          fromDB.getTableByName("meta_analysis").orElseThrow(IllegalStateException::new);
+    Dataset fromDB = datasetDao.retrieve(datasetId);
+    DatasetTable variants =
+        fromDB.getTableByName("variant").orElseThrow(IllegalStateException::new);
+    DatasetTable freqAnalysis =
+        fromDB.getTableByName("frequency_analysis").orElseThrow(IllegalStateException::new);
+    DatasetTable metaAnalysis =
+        fromDB.getTableByName("meta_analysis").orElseThrow(IllegalStateException::new);
 
-      assertThat(
-          "single-column primary keys are set correctly",
-          variants.getPrimaryKey().stream().map(Column::getName).collect(Collectors.toList()),
-          equalTo(Collections.singletonList("id")));
+    assertThat(
+        "single-column primary keys are set correctly",
+        variants.getPrimaryKey().stream().map(Column::getName).collect(Collectors.toList()),
+        equalTo(Collections.singletonList("id")));
 
-      assertThat(
-          "dual-column primary keys are set correctly",
-          metaAnalysis.getPrimaryKey().stream().map(Column::getName).collect(Collectors.toList()),
-          equalTo(Arrays.asList("variant_id", "phenotype")));
+    assertThat(
+        "dual-column primary keys are set correctly",
+        metaAnalysis.getPrimaryKey().stream().map(Column::getName).collect(Collectors.toList()),
+        equalTo(Arrays.asList("variant_id", "phenotype")));
 
-      assertThat(
-          "many-column primary keys are set correctly",
-          freqAnalysis.getPrimaryKey().stream().map(Column::getName).collect(Collectors.toList()),
-          equalTo(Arrays.asList("variant_id", "ancestry", "phenotype")));
-    } finally {
-      datasetDao.delete(datasetId, TEST_USER);
-    }
+    assertThat(
+        "many-column primary keys are set correctly",
+        freqAnalysis.getPrimaryKey().stream().map(Column::getName).collect(Collectors.toList()),
+        equalTo(Arrays.asList("variant_id", "ancestry", "phenotype")));
   }
 
   protected void assertTablesInRelationship(Dataset dataset) {
     String sqlFrom = "SELECT from_table " + "FROM dataset_relationship WHERE id = :id";
     String sqlTo = "SELECT to_table " + "FROM dataset_relationship WHERE id = :id";
-    dataset.getRelationships().stream()
+    dataset
+        .getRelationships()
         .forEach(
             rel -> {
               MapSqlParameterSource params =
@@ -447,323 +425,286 @@ public class DatasetDaoTest {
 
   protected void assertDatasetTable(Table table) {
     if (table.getName().equals("participant")) {
-      assertThat("participant table has 4 columns", table.getColumns().size(), equalTo(4));
+      assertThat("participant table has 4 columns", table.getColumns(), hasSize(4));
     } else {
       assertThat("other table created is sample", table.getName(), equalTo("sample"));
-      assertThat("sample table has 3 columns", table.getColumns().size(), equalTo(3));
+      assertThat("sample table has 3 columns", table.getColumns(), hasSize(3));
     }
   }
 
   protected void assertAssetSpecs(AssetSpecification spec) {
     if (spec.getName().equals("Trio")) {
-      assertThat("Trio asset has 2 tables", spec.getAssetTables().size(), equalTo(2));
+      assertThat("Trio asset has 2 tables", spec.getAssetTables(), hasSize(2));
       assertThat(
           "participant is the root table for Trio",
           spec.getRootTable().getTable().getName(),
           equalTo("participant"));
       assertThat(
           "participant asset table has only 3 columns",
-          spec.getRootTable().getColumns().size(),
-          equalTo(3));
-      assertThat(
-          "Trio asset follows 2 relationships", spec.getAssetRelationships().size(), equalTo(2));
+          spec.getRootTable().getColumns(),
+          hasSize(3));
+      assertThat("Trio asset follows 2 relationships", spec.getAssetRelationships(), hasSize(2));
     } else {
       assertThat("other asset created is Sample", spec.getName(), equalTo("sample"));
-      assertThat("Sample asset has 2 tables", spec.getAssetTables().size(), equalTo(2));
+      assertThat("Sample asset has 2 tables", spec.getAssetTables(), hasSize(2));
       assertThat(
           "sample is the root table", spec.getRootTable().getTable().getName(), equalTo("sample"));
-      assertThat("and 3 columns", spec.getRootTable().getColumns().size(), equalTo(3));
-      assertThat(
-          "Sample asset follows 1 relationship", spec.getAssetRelationships().size(), equalTo(1));
+      assertThat("and 3 columns", spec.getRootTable().getColumns(), hasSize(3));
+      assertThat("Sample asset follows 1 relationship", spec.getAssetRelationships(), hasSize(1));
     }
   }
 
   @Test
   public void mixingSharedAndExclusiveLocksTest() throws Exception {
     UUID datasetId = createDataset("dataset-primary-key.json");
-    try {
-      // check that there are no outstanding locks
-      String exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertNull("no exclusive lock after creation", exclusiveLock);
-      String[] sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after creation", 0, sharedLocks.length);
 
-      // 1. take out a shared lock
-      // confirm that there are no exclusive locks and one shared lock
-      datasetDao.lockShared(datasetId, "flightid1");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertNull("no exclusive lock after step 1", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("one shared lock after step 1", 1, sharedLocks.length);
-      assertEquals("flightid1 has shared lock after step 1", "flightid1", sharedLocks[0]);
+    // check that there are no outstanding locks
+    String exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertNull("no exclusive lock after creation", exclusiveLock);
+    List<String> sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after creation", sharedLocks, empty());
 
-      // 2. take out another shared lock
-      // confirm that there are no exclusive locks and two shared locks
-      datasetDao.lockShared(datasetId, "flightid2");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertNull("no exclusive lock after step 2", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("two shared locks after step 2", 2, sharedLocks.length);
-      assertTrue(
-          "flightid2 has shared lock after step 2",
-          Arrays.asList(sharedLocks).contains("flightid2"));
+    // 1. take out a shared lock
+    // confirm that there are no exclusive locks and one shared lock
+    String sharedLock1 = "flightid1";
+    datasetDao.lockShared(datasetId, sharedLock1);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertNull("no exclusive lock after step 1", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("one shared lock after step 1", sharedLocks, hasSize(1));
+    assertEquals("flightid1 has shared lock after step 1", sharedLocks.get(0), sharedLock1);
 
-      // 3. try to take out an exclusive lock
-      // confirm that it fails with a DatasetLockException
-      boolean threwLockException = false;
-      try {
-        datasetDao.lockExclusive(datasetId, "flightid3");
-      } catch (DatasetLockException dlEx) {
-        threwLockException = true;
-      }
-      assertTrue("exclusive lock threw exception in step 3", threwLockException);
+    // 2. take out another shared lock
+    // confirm that there are no exclusive locks and two shared locks
+    String sharedLock2 = "flightid2";
+    datasetDao.lockShared(datasetId, sharedLock2);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertNull("no exclusive lock after step 2", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("two shared locks after step 2", sharedLocks, hasSize(2));
+    assertTrue("flightid2 has shared lock after step 2", sharedLocks.contains(sharedLock2));
 
-      // 4. release the first shared lock
-      // confirm that there are no exclusive locks and one shared lock
-      datasetDao.unlockShared(datasetId, "flightid1");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertNull("no exclusive lock after step 4", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("one shared lock after step 4", 1, sharedLocks.length);
-      assertFalse(
-          "flightid1 no longer has shared lock after step 4",
-          Arrays.asList(sharedLocks).contains("flightid1"));
+    // 3. try to take out an exclusive lock
+    // confirm that it fails with a DatasetLockException
+    assertThrows(
+        "exclusive lock threw exception in step 3",
+        DatasetLockException.class,
+        () -> datasetDao.lockExclusive(datasetId, "flightid3"));
 
-      // 5. try to take out an exclusive lock
-      // confirm that it fails with a DatasetLockException
-      threwLockException = false;
-      try {
-        datasetDao.lockExclusive(datasetId, "flightid4");
-      } catch (DatasetLockException dlEx) {
-        threwLockException = true;
-      }
-      assertTrue("exclusive lock threw exception in step 5", threwLockException);
+    // 4. release the first shared lock
+    // confirm that there are no exclusive locks and one shared lock
+    datasetDao.unlockShared(datasetId, sharedLock1);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertNull("no exclusive lock after step 4", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("one shared lock after step 4", sharedLocks, hasSize(1));
+    assertFalse(
+        "flightid1 no longer has shared lock after step 4", sharedLocks.contains(sharedLock1));
 
-      // 6. take out five shared locks
-      // confirm that there are no exclusive locks and six shared locks
-      datasetDao.lockShared(datasetId, "flightid5");
-      datasetDao.lockShared(datasetId, "flightid6");
-      datasetDao.lockShared(datasetId, "flightid7");
-      datasetDao.lockShared(datasetId, "flightid8");
-      datasetDao.lockShared(datasetId, "flightid9");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertNull("no exclusive lock after step 6", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("six shared locks after step 6", 6, sharedLocks.length);
-      assertTrue(
-          "flightid2 has shared lock after step 6",
-          Arrays.asList(sharedLocks).contains("flightid2"));
-      assertTrue(
-          "flightid5 has shared lock after step 6",
-          Arrays.asList(sharedLocks).contains("flightid5"));
-      assertTrue(
-          "flightid6 has shared lock after step 6",
-          Arrays.asList(sharedLocks).contains("flightid6"));
-      assertTrue(
-          "flightid7 has shared lock after step 6",
-          Arrays.asList(sharedLocks).contains("flightid7"));
-      assertTrue(
-          "flightid8 has shared lock after step 6",
-          Arrays.asList(sharedLocks).contains("flightid8"));
-      assertTrue(
-          "flightid9 has shared lock after step 6",
-          Arrays.asList(sharedLocks).contains("flightid9"));
+    // 5. try to take out an exclusive lock
+    // confirm that it fails with a DatasetLockException
+    assertThrows(
+        "exclusive lock threw exception in step 5",
+        DatasetLockException.class,
+        () -> datasetDao.lockExclusive(datasetId, "flightid4"));
 
-      // 7. release all the shared locks
-      // confirm that there are no outstanding locks
-      datasetDao.unlockShared(datasetId, "flightid2");
-      datasetDao.unlockShared(datasetId, "flightid5");
-      datasetDao.unlockShared(datasetId, "flightid6");
-      datasetDao.unlockShared(datasetId, "flightid7");
-      datasetDao.unlockShared(datasetId, "flightid8");
-      datasetDao.unlockShared(datasetId, "flightid9");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertNull("no exclusive lock after step 7", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after step 7", 0, sharedLocks.length);
+    // 6. take out five shared locks
+    // confirm that there are no exclusive locks and six shared locks
+    List<String> bulkSharedLocks =
+        IntStream.range(5, 10).mapToObj("flightid%d"::formatted).toList();
 
-      // 8. take out an exclusive lock
-      // confirm that there is an exclusive lock and no shared locks
-      datasetDao.lockExclusive(datasetId, "flightid10");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertEquals("exclusive lock taken out after step 8", "flightid10", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after step 8", 0, sharedLocks.length);
+    bulkSharedLocks.forEach(sharedLock -> datasetDao.lockShared(datasetId, sharedLock));
 
-      // 9. try to take out a shared lock
-      // confirm that it fails with a DatasetLockException
-      threwLockException = false;
-      try {
-        datasetDao.lockShared(datasetId, "flightid11");
-      } catch (DatasetLockException dlEx) {
-        threwLockException = true;
-      }
-      assertTrue("shared lock threw exception in step 9", threwLockException);
+    List<String> expectedSharedLocks = new ArrayList<>();
+    expectedSharedLocks.add(sharedLock2);
+    expectedSharedLocks.addAll(bulkSharedLocks);
 
-      // 10. release the exclusive lock
-      // confirm that there are no outstanding locks
-      datasetDao.unlockExclusive(datasetId, "flightid10");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertNull("exclusive lock taken out after step 10", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after step 10", 0, sharedLocks.length);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertNull("no exclusive lock after step 6", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat(
+        "all expected shared locks after step 6",
+        sharedLocks,
+        containsInAnyOrder(expectedSharedLocks.toArray()));
 
-    } finally {
-      datasetDao.delete(datasetId, TEST_USER);
-    }
+    // 7. release all the shared locks
+    // confirm that there are no outstanding locks
+    expectedSharedLocks.forEach(sharedLock -> datasetDao.unlockShared(datasetId, sharedLock));
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertNull("no exclusive lock after step 7", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after step 7", sharedLocks, empty());
+
+    // 8. take out an exclusive lock
+    // confirm that there is an exclusive lock and no shared locks
+    String expectedExclusiveLock = "flightid10";
+    datasetDao.lockExclusive(datasetId, expectedExclusiveLock);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertEquals("exclusive lock taken out after step 8", expectedExclusiveLock, exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after step 8", sharedLocks, empty());
+
+    // 9. try to take out a shared lock
+    // confirm that it fails with a DatasetLockException
+    assertThrows(
+        "shared lock threw exception in step 9",
+        DatasetLockException.class,
+        () -> datasetDao.lockShared(datasetId, "flightid11"));
+
+    // 10. release the exclusive lock
+    // confirm that there are no outstanding locks
+    datasetDao.unlockExclusive(datasetId, exclusiveLock);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertNull("exclusive lock taken out after step 10", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after step 10", sharedLocks, empty());
   }
 
   @Test
   public void duplicateCallsForExclusiveLockTest() throws Exception {
     UUID datasetId = createDataset("dataset-primary-key.json");
-    try {
-      // check that there are no outstanding locks
-      String exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertNull("no exclusive lock after creation", exclusiveLock);
-      String[] sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after creation", 0, sharedLocks.length);
 
-      // 1. take out an exclusive lock
-      // confirm that there is an exclusive lock and no shared locks
-      datasetDao.lockExclusive(datasetId, "flightid20");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertEquals("exclusive lock taken out after step 1", "flightid20", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after step 1", 0, sharedLocks.length);
+    // check that there are no outstanding locks
+    String exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertNull("no exclusive lock after creation", exclusiveLock);
+    List<String> sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after creation", sharedLocks, empty());
 
-      // 2. try to take out an exclusive lock again with the same flightid
-      // confirm that the exclusive lock is still there and there are no shared locks
-      datasetDao.lockExclusive(datasetId, "flightid20");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertEquals("exclusive lock taken out after step 2", "flightid20", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after step 2", 0, sharedLocks.length);
+    // 1. take out an exclusive lock
+    // confirm that there is an exclusive lock and no shared locks
+    String exclusiveLock1 = "flightId20";
+    datasetDao.lockExclusive(datasetId, exclusiveLock1);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertEquals("exclusive lock taken out after step 1", exclusiveLock, exclusiveLock1);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after step 1", sharedLocks, empty());
 
-      // 3. try to unlock the exclusive lock with a different flightid
-      // confirm that the exclusive lock is still there and there are no shared locks
-      boolean rowUnlocked = datasetDao.unlockExclusive(datasetId, "flightid21");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertFalse(
-          "no rows updated on call to unlock with different flightid after step 3", rowUnlocked);
-      assertEquals("exclusive lock still taken out after step 3", "flightid20", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after step 3", 0, sharedLocks.length);
+    // 2. try to take out an exclusive lock again with the same flightid
+    // confirm that the exclusive lock is still there and there are no shared locks
+    datasetDao.lockExclusive(datasetId, exclusiveLock1);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertEquals("exclusive lock taken out after step 2", exclusiveLock, exclusiveLock1);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after step 2", sharedLocks, empty());
 
-      // 4. unlock the exclusive lock
-      // confirm that there are no outstanding exclusive or shared locks
-      rowUnlocked = datasetDao.unlockExclusive(datasetId, "flightid20");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertTrue("row was updated on first call to unlock after step 4", rowUnlocked);
-      assertNull("no exclusive lock after step 4", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after step 4", 0, sharedLocks.length);
+    // 3. try to unlock the exclusive lock with a different flightid
+    // confirm that the exclusive lock is still there and there are no shared locks
+    String exclusiveLock2 = "flightId21";
+    boolean rowUnlocked = datasetDao.unlockExclusive(datasetId, exclusiveLock2);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertFalse(
+        "no rows updated on call to unlock with different flightid after step 3", rowUnlocked);
+    assertEquals("exclusive lock still taken out after step 3", exclusiveLock, exclusiveLock1);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after step 3", sharedLocks, empty());
 
-      // 5. unlock the exclusive lock again with the same flightid
-      // confirm that there are still no oustanding exclusive or shared locks
-      rowUnlocked = datasetDao.unlockExclusive(datasetId, "flightid20");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertFalse("no rows updated on second call to unlock after step 5", rowUnlocked);
-      assertNull("no exclusive lock after step 5", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after step 5", 0, sharedLocks.length);
-    } finally {
-      datasetDao.delete(datasetId, TEST_USER);
-    }
+    // 4. unlock the exclusive lock
+    // confirm that there are no outstanding exclusive or shared locks
+    rowUnlocked = datasetDao.unlockExclusive(datasetId, exclusiveLock1);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertTrue("row was updated on first call to unlock after step 4", rowUnlocked);
+    assertNull("no exclusive lock after step 4", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after step 4", sharedLocks, empty());
+
+    // 5. unlock the exclusive lock again with the same flightid
+    // confirm that there are still no outstanding exclusive or shared locks
+    rowUnlocked = datasetDao.unlockExclusive(datasetId, exclusiveLock1);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertFalse("no rows updated on second call to unlock after step 5", rowUnlocked);
+    assertNull("no exclusive lock after step 5", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after step 5", sharedLocks, empty());
   }
 
   @Test
   public void duplicateCallsForSharedLockTest() throws Exception {
     UUID datasetId = createDataset("dataset-primary-key.json");
-    try {
-      // check that there are no outstanding locks
-      String exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertNull("no exclusive lock after creation", exclusiveLock);
-      String[] sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after creation", 0, sharedLocks.length);
 
-      // 1. take out a shared lock
-      // confirm that there is no exclusive lock and one shared lock
-      datasetDao.lockShared(datasetId, "flightid30");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertNull("no exclusive lock after step 1", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("one shared lock after step 1", 1, sharedLocks.length);
-      assertEquals("flightid30 has shared lock after step 1", "flightid30", sharedLocks[0]);
+    // check that there are no outstanding locks
+    String exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertNull("no exclusive lock after creation", exclusiveLock);
+    List<String> sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after creation", sharedLocks, empty());
 
-      // 2. try to take out a shared lock again with the same flightid
-      // confirm that the shared lock is still there and there is no exclusive lock
-      datasetDao.lockShared(datasetId, "flightid30");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertNull("no exclusive lock after step 2", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("one shared lock after step 2", 1, sharedLocks.length);
-      assertEquals("flightid30 has shared lock after step 2", "flightid30", sharedLocks[0]);
+    // 1. take out a shared lock
+    // confirm that there is no exclusive lock and one shared lock
+    String sharedLock1 = "flightid30";
+    datasetDao.lockShared(datasetId, sharedLock1);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertNull("no exclusive lock after step 1", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("one shared lock after step 1", sharedLocks, hasSize(1));
+    assertEquals("flightid30 has shared lock after step 1", sharedLocks.get(0), sharedLock1);
 
-      // 3. try to unlock the shared lock with a different flightid
-      // confirm that the shared lock is still there and there is no exclusive lock
-      boolean rowUnlocked = datasetDao.unlockShared(datasetId, "flightid31");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertFalse(
-          "no rows updated on call to unlock with different flightid after step 3", rowUnlocked);
-      assertNull("no exclusive lock after step 3", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("one shared lock still taken out after step 3", 1, sharedLocks.length);
-      assertEquals("flightid30 still has shared lock after step 3", "flightid30", sharedLocks[0]);
+    // 2. try to take out a shared lock again with the same flightid
+    // confirm that the shared lock is still there and there is no exclusive lock
+    datasetDao.lockShared(datasetId, sharedLock1);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertNull("no exclusive lock after step 2", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("one shared lock after step 2", sharedLocks, hasSize(1));
+    assertEquals("flightid30 has shared lock after step 2", sharedLocks.get(0), sharedLock1);
 
-      // 4. unlock the shared lock
-      // confirm that there are no outstanding exclusive or shared locks
-      rowUnlocked = datasetDao.unlockShared(datasetId, "flightid30");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertTrue("row was updated on first call to unlock after step 4", rowUnlocked);
-      assertNull("no exclusive lock after step 4", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after step 4", 0, sharedLocks.length);
+    // 3. try to unlock the shared lock with a different flightid
+    // confirm that the shared lock is still there and there is no exclusive lock
+    String sharedLock2 = "flightid31";
+    boolean rowUnlocked = datasetDao.unlockShared(datasetId, sharedLock2);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertFalse(
+        "no rows updated on call to unlock with different flightid after step 3", rowUnlocked);
+    assertNull("no exclusive lock after step 3", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("one shared lock after step 3", sharedLocks, hasSize(1));
+    assertEquals("flightid30 still has shared lock after step 3", sharedLocks.get(0), sharedLock1);
 
-      // 5. unlock the exclusive lock again with the same flightid
-      // confirm that there are still no oustanding exclusive or shared locks
-      rowUnlocked = datasetDao.unlockShared(datasetId, "flightid30");
-      exclusiveLock = datasetDao.getExclusiveLock(datasetId);
-      assertFalse("no rows updated on second call to unlock after step 5", rowUnlocked);
-      assertNull("no exclusive lock after step 5", exclusiveLock);
-      sharedLocks = datasetDao.getSharedLocks(datasetId);
-      assertEquals("no shared locks after step 5", 0, sharedLocks.length);
-    } finally {
-      datasetDao.delete(datasetId, TEST_USER);
-    }
+    // 4. unlock the shared lock
+    // confirm that there are no outstanding exclusive or shared locks
+    rowUnlocked = datasetDao.unlockShared(datasetId, sharedLock1);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertTrue("row was updated on first call to unlock after step 4", rowUnlocked);
+    assertNull("no exclusive lock after step 4", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after step 4", sharedLocks, empty());
+
+    // 5. unlock the exclusive lock again with the same flightid
+    // confirm that there are still no outstanding exclusive or shared locks
+    rowUnlocked = datasetDao.unlockShared(datasetId, sharedLock1);
+    exclusiveLock = datasetDao.getExclusiveLock(datasetId);
+    assertFalse("no rows updated on second call to unlock after step 5", rowUnlocked);
+    assertNull("no exclusive lock after step 5", exclusiveLock);
+    sharedLocks = Arrays.asList(datasetDao.getSharedLocks(datasetId));
+    assertThat("no shared locks after step 5", sharedLocks, empty());
   }
 
   @Test
-  public void lockNonExistentDatasetTest() throws Exception {
+  public void lockNonExistentDatasetTest() {
     UUID nonExistentDatasetId = UUID.randomUUID();
 
     // try to take out an exclusive lock
-    // confirm that it fails with a DatasetNotFoundkException
-    boolean threwNotFoundException = false;
-    try {
-      datasetDao.lockExclusive(nonExistentDatasetId, "flightid40");
-    } catch (DatasetNotFoundException dnfEx) {
-      threwNotFoundException = true;
-    }
-    assertTrue("exclusive lock threw not found exception", threwNotFoundException);
+    // confirm that it fails with a DatasetNotFoundException
+    String exclusiveLock = "flightid40";
+    assertThrows(
+        "exclusive lock threw not found exception",
+        DatasetNotFoundException.class,
+        () -> datasetDao.lockExclusive(nonExistentDatasetId, exclusiveLock));
 
     // try to release an exclusive lock
     // confirm that it succeeds with no rows updated
-    boolean rowUpdated = datasetDao.unlockExclusive(nonExistentDatasetId, "flightid40");
+    boolean rowUpdated = datasetDao.unlockExclusive(nonExistentDatasetId, exclusiveLock);
     assertFalse("exclusive unlock did not update any rows", rowUpdated);
 
     // try to take out a shared lock
-    // confirm that it fails with a DatasetNotFoundkException
-    threwNotFoundException = false;
-    try {
-      datasetDao.lockShared(nonExistentDatasetId, "flightid41");
-    } catch (DatasetNotFoundException dnfEx) {
-      threwNotFoundException = true;
-    }
-    assertTrue("exclusive lock threw not found exception", threwNotFoundException);
+    // confirm that it fails with a DatasetNotFoundException
+    String sharedLock = "flightid41";
+    assertThrows(
+        "shared lock threw not found exception",
+        DatasetNotFoundException.class,
+        () -> datasetDao.lockShared(nonExistentDatasetId, sharedLock));
 
     // try to release a shared lock
     // confirm that it succeeds with no rows updated
-    rowUpdated = datasetDao.unlockExclusive(nonExistentDatasetId, "flightid40");
+    rowUpdated = datasetDao.unlockExclusive(nonExistentDatasetId, sharedLock);
     assertFalse("shared unlock did not update any rows", rowUpdated);
   }
 
@@ -779,7 +720,6 @@ public class DatasetDaoTest {
                     "can retrieve row metadata table name",
                     t.getRowMetadataTableName(),
                     containsString("row_metadata")));
-    datasetDao.delete(datasetId, TEST_USER);
   }
 
   @Test
@@ -830,7 +770,7 @@ public class DatasetDaoTest {
             .getColumns()
             .stream()
             .map(Column::getName)
-            .collect(Collectors.toList()),
+            .toList(),
         contains("c1", "c2", "c3"));
 
     assertThat(
@@ -842,21 +782,15 @@ public class DatasetDaoTest {
             .getColumns()
             .stream()
             .map(Column::getName)
-            .collect(Collectors.toList()),
+            .toList(),
         contains("c3", "c2", "c1"));
-
-    datasetDao.delete(dataset1Id, TEST_USER);
-    datasetDao.delete(dataset2Id, TEST_USER);
   }
 
   @Test
   public void patchDatasetPhsId() throws Exception {
     UUID datasetId = createDataset("dataset-create-test.json");
 
-    assertThat(
-        "dataset's PHS ID is null before patch",
-        datasetDao.retrieve(datasetId).getPhsId(),
-        equalTo(null));
+    assertNull("dataset's PHS ID is null before patch", datasetDao.retrieve(datasetId).getPhsId());
 
     String phsIdSet = "phs000000";
     DatasetPatchRequestModel patchRequestSet = new DatasetPatchRequestModel().phsId(phsIdSet);
@@ -887,31 +821,28 @@ public class DatasetDaoTest {
         "dataset's PHS ID is set to empty string from patch",
         datasetDao.retrieve(datasetId).getPhsId(),
         equalTo(""));
-
-    datasetDao.delete(datasetId, TEST_USER);
   }
 
   @Test
   public void createDatasetWithProperties() throws Exception {
     DatasetRequestModel request =
         jsonLoader.loadObject("dataset-create-with-properties.json", DatasetRequestModel.class);
-    String expectedName = request.getName() + UUID.randomUUID().toString();
+    String expectedName = request.getName() + UUID.randomUUID();
     UUID datasetId = createDataset(request, expectedName, null);
+
     assertThat(
         "dataset properties are set",
         datasetDao.retrieve(datasetId).getProperties(),
         equalTo(request.getProperties()));
-    datasetDao.delete(datasetId, TEST_USER);
   }
 
   @Test
   public void patchDatasetProperties() throws Exception {
     UUID datasetId = createDataset("dataset-create-test.json");
+
     String defaultDesc = datasetDao.retrieve(datasetId).getDescription();
-    assertThat(
-        "dataset properties is null before patch",
-        datasetDao.retrieve(datasetId).getProperties(),
-        equalTo(null));
+    assertNull(
+        "dataset properties is null before patch", datasetDao.retrieve(datasetId).getProperties());
 
     String updatedProperties = "{\"projectName\":\"updatedProject\"}";
     Object updatedDatasetProperties =
@@ -981,6 +912,46 @@ public class DatasetDaoTest {
         "dataset properties is set to empty",
         datasetDao.retrieve(datasetId).getProperties(),
         equalTo(unsetDatasetProperties));
-    datasetDao.delete(datasetId, TEST_USER);
+  }
+
+  @Test
+  public void createDatasetWithTags() throws Exception {
+    DatasetRequestModel requestNullTags =
+        jsonLoader.loadObject("dataset-create-test.json", DatasetRequestModel.class).tags(null);
+    String nameNullTags = requestNullTags.getName() + UUID.randomUUID();
+    UUID datasetIdNullTags = createDataset(requestNullTags, nameNullTags, null);
+
+    verifyTags("null dataset tags are returned as empty list", datasetIdNullTags, List.of());
+
+    DatasetRequestModel requestEmptyTags =
+        jsonLoader
+            .loadObject("dataset-create-test.json", DatasetRequestModel.class)
+            .tags(List.of());
+    String nameEmptyTags = requestEmptyTags.getName() + UUID.randomUUID();
+    UUID datasetIdEmptyTags = createDataset(requestEmptyTags, nameEmptyTags, null);
+
+    verifyTags("empty dataset tags are returned as empty list", datasetIdEmptyTags, List.of());
+
+    List<String> tags = new ArrayList<>(List.of("a tag", "A TAG", "duplicate", "duplicate"));
+    tags.add(null);
+    List<String> expectedTags = List.of("a tag", "A TAG", "duplicate");
+    DatasetRequestModel requestWithTags =
+        jsonLoader.loadObject("dataset-create-test.json", DatasetRequestModel.class).tags(tags);
+    String nameWithTags = requestWithTags.getName() + UUID.randomUUID();
+    UUID datasetIdWithTags = createDataset(requestWithTags, nameWithTags, null);
+
+    verifyTags("distinct non-null tags are returned", datasetIdWithTags, expectedTags);
+  }
+
+  private void verifyTags(String reason, UUID datasetId, List<String> expectedTags) {
+    assertThat(
+        reason + " when retrieving dataset",
+        datasetDao.retrieve(datasetId).getTags(),
+        containsInAnyOrder(expectedTags.toArray()));
+
+    assertThat(
+        reason + " when retrieving dataset summary",
+        datasetDao.retrieveSummaryById(datasetId).getTags(),
+        containsInAnyOrder(expectedTags.toArray()));
   }
 }
